修复了部分严重bug,即将重构转化系统