@@ -12,7 +12,8 @@ import io.github.thebusybiscuit.slimefun4.core.handlers.BlockPlaceHandler;
 import io.github.thebusybiscuit.slimefun4.core.networks.energy.EnergyNetComponentType;
 import io.github.thebusybiscuit.slimefun4.implementation.Slimefun;
 import io.github.thebusybiscuit.slimefun4.libraries.dough.items.CustomItemStack;
-import me.mrCookieSlime.CSCoreLibPlugin.Configuration.Config;
+import io.github.thebusybiscuit.slimefun4.utils.ChestMenuUtils;
+import io.github.thebusybiscuit.slimefun4.utils.LoreBuilder;
 import me.mrCookieSlime.Slimefun.Objects.handlers.BlockTicker;
 import me.mrCookieSlime.Slimefun.api.BlockStorage;
 import me.mrCookieSlime.Slimefun.api.inventory.BlockMenu;
@@ -33,12 +34,14 @@ import org.bukkit.event.block.BlockPlaceEvent;
 import org.bukkit.event.inventory.InventoryClickEvent;
 import org.bukkit.event.inventory.InventoryDragEvent;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import javax.annotation.Nonnull;
 import java.io.File;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.logging.Level;
 
 public abstract class StarsGenerator extends SlimefunItem implements EnergyNetProvider, EnergyNetComponent, Listener {
     protected static final int INPUT_SLOT = 10;
@@ -52,8 +55,10 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
     protected final String generatorId;
     protected final Set<Location> generatorLocations = ConcurrentHashMap.newKeySet();
     protected final Map<String, FuelConfig> fuels;
-    protected final Map<String, ConversionUtil.SingleInputProcessor> processors;
+    protected final Map<String, ConversionUtil.AbstractConversionProcessor> processors;
     protected final Map<String, ConversionUtil.ConversionRule> rules;
+    protected final ConversionUtil.StateItemProvider stateItemProvider;
+    protected final ConversionUtil.SpecialCaseHandler specialCaseHandler;
 
     protected static class FuelConfig {
         final int energyPerTick;
@@ -67,7 +72,8 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
         }
     }
 
-    public StarsGenerator(ItemGroup itemGroup, SlimefunItemStack item, RecipeType recipeType, ItemStack[] recipe, XingchenExpansion plugin, String generatorId) {
+    public StarsGenerator(ItemGroup itemGroup, SlimefunItemStack item, RecipeType recipeType, ItemStack[] recipe,
+                          XingchenExpansion plugin, String generatorId) {
         super(itemGroup, item, recipeType, recipe);
         this.plugin = plugin;
         this.generatorId = generatorId;
@@ -88,6 +94,8 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
             this.fuels = new HashMap<>();
             this.processors = new HashMap<>();
             this.rules = new HashMap<>();
+            this.stateItemProvider = null;
+            this.specialCaseHandler = null;
             disable();
             return;
         }
@@ -101,11 +109,13 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
             this.fuels = new HashMap<>();
             this.processors = new HashMap<>();
             this.rules = new HashMap<>();
+            this.stateItemProvider = null;
+            this.specialCaseHandler = null;
             disable();
             return;
         }
 
-        Map<String, ConversionUtil.SingleInputProcessor> processors = new HashMap<>();
+        Map<String, ConversionUtil.AbstractConversionProcessor> processors = new HashMap<>();
         Map<String, FuelConfig> fuels = new HashMap<>();
         Map<String, ConversionUtil.ConversionRule> rules = new HashMap<>();
         for (String fuelId : fuelsSection.getKeys(false)) {
@@ -115,15 +125,21 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
             if (energy > 0 && burnTime > 0) {
                 fuels.put(fuelId, new FuelConfig(energy, burnTime, wasteAmount));
                 ConversionUtil.ConversionRule rule = new ConversionUtil.ConversionRule(
-                        List.of(fuelId),
-                        wasteAmount > 0 ? List.of(WASTE_ID) : List.of(),
+                        List.of(new ConversionUtil.SlimefunItemMatcherImpl(fuelId)),
+                        wasteAmount > 0 ? List.of(new ConversionUtil.SlimefunItemMatcherImpl(WASTE_ID)) : Collections.emptyList(),
                         List.of(1),
-                        wasteAmount > 0 ? List.of(wasteAmount) : List.of(),
+                        wasteAmount > 0 ? List.of(wasteAmount) : Collections.emptyList(),
                         wasteAmount > 0 ? ConversionUtil.OutputMode.ALL : ConversionUtil.OutputMode.NONE,
-                        burnTime
+                        burnTime,
+                        STATUS_SLOT,
+                        true
                 );
                 rules.put(fuelId, rule);
-                processors.put(fuelId, new ConversionUtil.SingleInputProcessor(List.of(rule)));
+                processors.put(fuelId, new ConversionUtil.SingleInputProcessor(
+                        List.of(rule),
+                        new GeneratorStateItemProvider(),
+                        new GeneratorSpecialCaseHandler()
+                ));
             }
         }
 
@@ -134,6 +150,8 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
             this.fuels = new HashMap<>();
             this.processors = new HashMap<>();
             this.rules = new HashMap<>();
+            this.stateItemProvider = null;
+            this.specialCaseHandler = null;
             disable();
             return;
         }
@@ -142,6 +160,8 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
         this.fuels = fuels;
         this.processors = processors;
         this.rules = rules;
+        this.stateItemProvider = new GeneratorStateItemProvider();
+        this.specialCaseHandler = new GeneratorSpecialCaseHandler();
 
         this.preset = new BlockMenuPreset(getId(), item.getDisplayName()) {
             @Override
@@ -156,7 +176,8 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
 
             @Override
             public boolean canOpen(Block b, Player p) {
-                return p.hasPermission("slimefun.inventory.bypass") || Slimefun.getPermissionsService().hasPermission(p, StarsGenerator.this);
+                return p.hasPermission("slimefun.inventory.bypass") ||
+                        Slimefun.getPermissionsService().hasPermission(p, StarsGenerator.this);
             }
 
             @Override
@@ -177,7 +198,7 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
         addItemHandler(
                 new BlockTicker() {
                     @Override
-                    public void tick(Block b, SlimefunItem sf, Config data) {
+                    public void tick(Block b, SlimefunItem sf, me.mrCookieSlime.CSCoreLibPlugin.Configuration.Config data) {
                         StarsGenerator.this.tick(b);
                     }
 
@@ -190,8 +211,7 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
                     @Override
                     public void onPlayerPlace(BlockPlaceEvent event) {
                         Block block = event.getBlock();
-                        Location loc = block.getLocation();
-                        generatorLocations.add(loc.clone());
+                        generatorLocations.add(normalizeLocation(block.getLocation()));
                     }
                 },
                 new BlockBreakHandler(false, false) {
@@ -202,14 +222,56 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
                         if (inv != null) {
                             inv.dropItems(b.getLocation(), INPUT_SLOT);
                             inv.dropItems(b.getLocation(), OUTPUT_SLOTS);
+                            String fuelId = BlockStorage.getLocationInfo(b.getLocation(), "fuel_id");
+                            ConversionUtil.AbstractConversionProcessor processor = fuelId != null ? processors.get(fuelId) : null;
+                            if (processor != null) {
+                                processor.terminateWithReturn(inv, b.getLocation(), plugin, new int[]{INPUT_SLOT}, OUTPUT_SLOTS);
+                            }
                         }
                         BlockStorage.clearBlockInfo(b);
-                        generatorLocations.remove(b.getLocation());
+                        generatorLocations.remove(normalizeLocation(b.getLocation()));
                     }
                 }
         );
 
         plugin.getLogger().info("注册发电机: " + generatorId);
+    }
+
+    private class GeneratorStateItemProvider implements ConversionUtil.StateItemProvider {
+        @Override
+        @Nonnull
+        public Map<ConversionUtil.MachineState, ItemStack> getStateItems() {
+            Map<ConversionUtil.MachineState, ItemStack> items = new HashMap<>();
+            items.put(ConversionUtil.MachineState.CONVERTING, new CustomItemStack(
+                    Material.LIME_DYE, "§a运行中",
+                    "§7状态: 运行中", "§7" + LoreBuilder.powerPerSecond(0)
+            ));
+            items.put(ConversionUtil.MachineState.OUTPUT_FULL, new CustomItemStack(
+                    Material.REDSTONE, "§c暂停",
+                    "§7状态: 输出槽已满", "§7" + LoreBuilder.powerPerSecond(0)
+            ));
+            items.put(ConversionUtil.MachineState.IDLE, new CustomItemStack(
+                    Material.REDSTONE, "§c待机",
+                    "§7状态: 待机", "§7" + LoreBuilder.powerPerSecond(0)
+            ));
+            items.put(ConversionUtil.MachineState.NO_INPUT, new CustomItemStack(
+                    Material.REDSTONE, "§c无燃料",
+                    "§7状态: 缺少燃料", "§7" + LoreBuilder.powerPerSecond(0)
+            ));
+            items.put(ConversionUtil.MachineState.NO_ENERGY, new CustomItemStack(
+                    Material.REDSTONE, "§c能量网络故障",
+                    "§7状态: 能量网络故障", "§7" + LoreBuilder.powerPerSecond(0)
+            ));
+            return items;
+        }
+    }
+
+    private class GeneratorSpecialCaseHandler implements ConversionUtil.SpecialCaseHandler {
+        @Override
+        @Nonnull
+        public Optional<ItemStack> handleSpecialCase(@Nonnull ConversionUtil.ProgressInfo info) {
+            return Optional.empty();
+        }
     }
 
     protected void tick(Block b) {
@@ -218,76 +280,133 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
     }
 
     protected void process(@Nonnull Location location) {
+        if (preset == null || processors.isEmpty()) return;
+
         BlockMenu menu = BlockStorage.getInventory(location.getBlock());
         if (menu == null) {
             try {
-                BlockStorage.addBlockInfo(location, "id", getId());
+                if (BlockStorage.getLocationInfo(location, "id") == null) {
+                    BlockStorage.addBlockInfo(location, "id", getId());
+                }
                 menu = new BlockMenu(preset, location);
                 newItemMenu(menu);
-                generatorLocations.add(location.clone());
+                generatorLocations.add(normalizeLocation(location));
+                menu.save(menu.getLocation());
             } catch (IllegalStateException e) {
-                plugin.getLogger().warning("无法初始化 BlockStorage: 位置=" + location + ", 错误=" + e.getMessage());
+                plugin.getLogger().log(Level.WARNING, "无法初始化 BlockStorage: 位置=" + location + ", 错误=" + e.getMessage());
                 return;
             }
         }
 
         ItemStack inputItem = menu.getItemInSlot(INPUT_SLOT);
         String fuelId = Util.getSlimefunId(inputItem);
-        ConversionUtil.SingleInputProcessor processor = fuelId != null ? processors.get(fuelId) : null;
+        ConversionUtil.AbstractConversionProcessor processor = fuelId != null ? processors.get(fuelId) : null;
+        boolean shouldSave = false;
+        String saveReason = null;
 
-        // 清理无效状态
-        String currentRuleId = BlockStorage.getLocationInfo(location, "rule_id");
-        if (currentRuleId != null && processor != null) {
-            ConversionUtil.ConversionRule rule = rules.get(fuelId);
-            if (!currentRuleId.equals(rule.getRuleId())) {
-                plugin.getLogger().info("输入物品变化，清理旧状态: location=" + location + ", oldRuleId=" + currentRuleId + ", newFuelId=" + fuelId);
+        // 重置状态：输入槽清空或燃料变化
+        String currentFuelId = BlockStorage.getLocationInfo(location, "fuel_id");
+        if (inputItem == null || inputItem.getType() == Material.AIR || (currentFuelId != null && fuelId != null && !currentFuelId.equals(fuelId))) {
+            if (currentFuelId != null) {
+                ConversionUtil.AbstractConversionProcessor oldProcessor = processors.get(currentFuelId);
+                if (oldProcessor != null) {
+                    oldProcessor.pause(menu, location, plugin, new int[]{INPUT_SLOT}, OUTPUT_SLOTS);
+                }
+                BlockStorage.addBlockInfo(location, "fuel_id", null);
                 BlockStorage.addBlockInfo(location, "rule_id", null);
-                BlockStorage.addBlockInfo(location, "processing_time_" + currentRuleId, null);
                 BlockStorage.addBlockInfo(location, "energy_per_tick", null);
+                BlockStorage.addBlockInfo(location, "task_state", null);
+                for (ConversionUtil.ConversionRule rule : rules.values()) {
+                    BlockStorage.addBlockInfo(location, "processing_time_" + rule.getRuleId(), null);
+                }
+                saveReason = "燃料切换或输入清空";
+                menu.save(menu.getLocation());
+            }
+            updateStatus(menu, location);
+            if (inputItem == null || inputItem.getType() == Material.AIR) {
+                return;
             }
         }
 
         if (processor == null) {
-            if (currentRuleId != null) {
-                BlockStorage.addBlockInfo(location, "rule_id", null);
-                BlockStorage.addBlockInfo(location, "processing_time_" + currentRuleId, null);
-                BlockStorage.addBlockInfo(location, "energy_per_tick", null);
-            }
-            updateStatus(menu);
+            updateStatus(menu, location);
             return;
         }
 
-        // 检查输出槽是否允许转化
-        ConversionUtil.ConversionRule rule = rules.get(fuelId);
-        boolean canOutput = processor.canOutput(menu, OUTPUT_SLOTS, rule, plugin, location);
-        ConversionUtil.ProgressInfo progress = processor.getProgressInfo(location, plugin);
+        // 获取规则和状态
+        String ruleId = BlockStorage.getLocationInfo(location, "rule_id");
+        ConversionUtil.TaskState taskState = processor.getTaskState(location);
+        ConversionUtil.ConversionRule activeRule = null;
 
-        if (!canOutput && progress.isProcessing()) {
-            // 输出槽满，暂停转化
-            String timeKey = "processing_time_" + currentRuleId;
-            BlockStorage.addBlockInfo(location, timeKey, "1");
-            BlockStorage.addBlockInfo(location, "energy_per_tick", null);
-            updateStatus(menu);
+        // 初始化规则
+        if (ruleId == null) {
+            activeRule = rules.get(fuelId);
+            if (activeRule != null) {
+                ruleId = activeRule.getRuleId();
+                BlockStorage.addBlockInfo(location, "rule_id", ruleId);
+                BlockStorage.addBlockInfo(location, "task_state", ConversionUtil.TaskState.IDLE.name());
+                BlockStorage.addBlockInfo(location, "processing_time_" + ruleId, "0");
+                shouldSave = true;
+                saveReason = "规则初始化";
+                menu.save(menu.getLocation());
+            } else {
+                updateStatus(menu, location);
+                return;
+            }
+        } else {
+            activeRule = rules.get(fuelId);
+            if (activeRule == null || !activeRule.getRuleId().equals(ruleId)) {
+                updateStatus(menu, location);
+                return;
+            }
+        }
+
+        // 检查输入和输出
+        boolean hasValidInput = inputItem != null && activeRule.getInputItems().stream()
+                .anyMatch(matcher -> matcher.matches(inputItem));
+        if (!hasValidInput) {
+            if (taskState == ConversionUtil.TaskState.RUNNING) {
+                processor.pause(menu, location, plugin, new int[]{INPUT_SLOT}, OUTPUT_SLOTS);
+            }
+            updateStatus(menu, location);
             return;
+        }
+
+        boolean canOutput = processor.canOutput(menu, OUTPUT_SLOTS, activeRule, plugin, location);
+        if (!canOutput) {
+            if (taskState == ConversionUtil.TaskState.RUNNING) {
+                processor.pause(menu, location, plugin, new int[]{INPUT_SLOT}, OUTPUT_SLOTS);
+            }
+            updateStatus(menu, location);
+            return;
+        }
+
+        // 恢复运行
+        if (taskState == ConversionUtil.TaskState.PAUSED && activeRule != null) {
+            processor.resume(menu, location, plugin, new int[]{INPUT_SLOT}, OUTPUT_SLOTS);
         }
 
         // 执行转化
         boolean processed = processor.process(menu, location, plugin, new int[]{INPUT_SLOT}, OUTPUT_SLOTS);
-        if (processed || progress.isProcessing()) {
+        if (processed) {
+            shouldSave = true;
+            saveReason = "转化完成";
             FuelConfig config = fuels.get(fuelId);
-            if (config != null && canOutput) {
+            if (config != null) {
+                BlockStorage.addBlockInfo(location, "fuel_id", fuelId);
+                BlockStorage.addBlockInfo(location, "rule_id", ruleId);
                 BlockStorage.addBlockInfo(location, "energy_per_tick", String.valueOf(config.energyPerTick));
-            } else {
-                BlockStorage.addBlockInfo(location, "energy_per_tick", null);
             }
-        } else {
-            BlockStorage.addBlockInfo(location, "energy_per_tick", null);
         }
-        updateStatus(menu);
+
+        updateStatus(menu, location);
+        if (shouldSave) {
+            menu.save(menu.getLocation());
+        }
     }
 
     @Override
-    public int getGeneratedOutput(@Nonnull Location location, @Nonnull Config data) {
+    public int getGeneratedOutput(@Nonnull Location location, @Nonnull me.mrCookieSlime.CSCoreLibPlugin.Configuration.Config data) {
         if (preset == null || processors.isEmpty()) return 0;
 
         BlockMenu menu = BlockStorage.getInventory(location.getBlock());
@@ -295,16 +414,24 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
 
         ItemStack inputItem = menu.getItemInSlot(INPUT_SLOT);
         String fuelId = Util.getSlimefunId(inputItem);
-        ConversionUtil.SingleInputProcessor processor = fuelId != null ? processors.get(fuelId) : null;
+        ConversionUtil.AbstractConversionProcessor processor = fuelId != null ? processors.get(fuelId) : null;
         if (processor == null) return 0;
 
-        ConversionUtil.ConversionRule rule = rules.get(fuelId);
-        boolean canOutput = processor.canOutput(menu, OUTPUT_SLOTS, rule, plugin, location);
-        ConversionUtil.ProgressInfo progress = processor.getProgressInfo(location, plugin);
+        ConversionUtil.TaskState taskState = processor.getTaskState(location);
+        if (taskState != ConversionUtil.TaskState.RUNNING) return 0;
 
-        if (!progress.isProcessing() || !canOutput) {
-            return 0;
+        ConversionUtil.ProgressInfo progress = processor.getProgressInfo(location, plugin, new int[]{INPUT_SLOT}, OUTPUT_SLOTS);
+        if (!progress.isProcessing()) return 0;
+
+        String ruleId = progress.getRuleId();
+        ConversionUtil.ConversionRule activeRule = null;
+        if (ruleId != null) {
+            activeRule = processor.getRules().stream()
+                    .filter(r -> r.getRuleId().equals(ruleId))
+                    .findFirst()
+                    .orElse(null);
         }
+        if (!processor.canOutput(menu, OUTPUT_SLOTS, activeRule, plugin, location)) return 0;
 
         String energyStr = BlockStorage.getLocationInfo(location, "energy_per_tick");
         try {
@@ -315,39 +442,60 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
         }
     }
 
-    protected void updateStatus(BlockMenu menu) {
+    protected void updateStatus(@Nonnull BlockMenu menu, @Nonnull Location location) {
         ItemStack inputItem = menu.getItemInSlot(INPUT_SLOT);
-        Location location = menu.getLocation();
         String fuelId = Util.getSlimefunId(inputItem);
-        ConversionUtil.SingleInputProcessor processor = fuelId != null ? processors.get(fuelId) : null;
-        ConversionUtil.ProgressInfo progress = processor != null ? processor.getProgressInfo(location, plugin) :
-                new ConversionUtil.ProgressInfo(false, null, 0, 0);
-        String statusText = "§c待机";
+        ConversionUtil.AbstractConversionProcessor processor = fuelId != null ? processors.get(fuelId) : null;
+        ConversionUtil.ProgressInfo progress = processor != null
+                ? processor.getProgressInfo(location, plugin, new int[]{INPUT_SLOT}, OUTPUT_SLOTS)
+                : new ConversionUtil.ProgressInfo(ConversionUtil.MachineState.IDLE, null, 0, 0, false);
         int energy = getCurrentFuelEnergy(menu);
 
-        boolean outputFull = Arrays.stream(OUTPUT_SLOTS)
-                .allMatch(slot -> {
-                    ItemStack item = menu.getItemInSlot(slot);
-                    return item != null && item.getAmount() >= item.getMaxStackSize();
-                });
+        ItemStack statusItem = specialCaseHandler.handleSpecialCase(progress).orElseGet(() -> {
+            if (inputItem != null && inputItem.getType() != Material.AIR && (fuelId == null || !fuels.containsKey(fuelId))) {
+                return new CustomItemStack(
+                        Material.REDSTONE, "§c无效燃料",
+                        "§7状态: 无效燃料",
+                        "§7能量: 0 J/tick"
+                );
+            }
+            Map<ConversionUtil.MachineState, ItemStack> stateItems = stateItemProvider.getStateItems();
+            ItemStack template = stateItems.getOrDefault(progress.getState(),
+                    new ConversionUtil.DefaultStateItemProvider().getStateItems().get(progress.getState()));
+            if (template == null) {
+                plugin.getLogger().warning("状态模板缺失: state=" + progress.getState() + ", location=" + location);
+                template = new CustomItemStack(Material.REDSTONE, "§c状态: " + progress.getState().getDisplayName());
+            }
+            ItemStack result = template.clone();
+            ItemMeta meta = result.getItemMeta();
+            if (meta == null) {
+                meta = plugin.getServer().getItemFactory().getItemMeta(result.getType());
+                result.setItemMeta(meta);
+            }
+            List<String> lore = new ArrayList<>(meta.hasLore() ? meta.getLore() : Collections.emptyList());
+            int statusIndex = -1;
+            for (int i = 0; i < lore.size(); i++) {
+                if (lore.get(i).startsWith("§7状态:")) {
+                    statusIndex = i;
+                    break;
+                }
+            }
+            lore.removeIf(line -> line.startsWith("§7能量:"));
+            lore.add(statusIndex >= 0 ? statusIndex + 1 : lore.size(), "§7能量: " + energy + " J/tick");
+            if (progress.isProcessing() && progress.getState() == ConversionUtil.MachineState.CONVERTING) {
+                lore.add(statusIndex >= 0 ? statusIndex + 2 : lore.size(), "§7进度: " + progress.getProgressBar(10));
+                lore.add(statusIndex >= 0 ? statusIndex + 3 : lore.size(), "§7剩余: " + String.format("%.1fs", progress.getRemainingSeconds()));
+            }
+            meta.setLore(lore);
+            result.setItemMeta(meta);
+            return result;
+        });
 
-        if (outputFull) {
-            statusText = "§c待机 (§e输出槽已满)";
-        } else if (progress.isProcessing()) {
-            double remainingSeconds = progress.getRemainingSeconds();
-            statusText = "§a运行中 (§e剩余: " + String.format("%.1f", remainingSeconds) + "秒)";
-        } else if (inputItem != null && fuelId != null && fuels.containsKey(fuelId)) {
-            statusText = "§a准备运行";
-        } else if (inputItem != null && inputItem.getType() != Material.AIR) {
-            statusText = "§c待机 (§e无效燃料)";
-        }
-
-        ItemStack status = new CustomItemStack(Material.REDSTONE, "§c状态: " + statusText, "§7能量: " + energy + " J/tick");
-        menu.replaceExistingItem(STATUS_SLOT, status);
-        menu.addMenuClickHandler(STATUS_SLOT, (p, s, item, action) -> false);
+        menu.replaceExistingItem(STATUS_SLOT, statusItem);
+        menu.addMenuClickHandler(STATUS_SLOT, ChestMenuUtils.getEmptyClickHandler());
     }
 
-    protected int getCurrentFuelEnergy(BlockMenu menu) {
+    protected int getCurrentFuelEnergy(@Nonnull BlockMenu menu) {
         ItemStack inputItem = menu.getItemInSlot(INPUT_SLOT);
         String fuelId = Util.getSlimefunId(inputItem);
         FuelConfig config = fuelId != null ? fuels.get(fuelId) : null;
@@ -359,67 +507,128 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
         for (int i = 0; i < 27; i++) {
             int finalI = i;
             if (i == INPUT_SLOT || i == STATUS_SLOT || Arrays.stream(OUTPUT_SLOTS).anyMatch(s -> s == finalI)) continue;
-            preset.addItem(i, new CustomItemStack(Material.GRAY_STAINED_GLASS_PANE, " "), (p, s, item, action) -> false);
+            preset.addItem(i, new CustomItemStack(Material.GRAY_STAINED_GLASS_PANE, " "), ChestMenuUtils.getEmptyClickHandler());
+            preset.addMenuClickHandler(i, ChestMenuUtils.getEmptyClickHandler());
         }
         preset.addMenuClickHandler(INPUT_SLOT, (p, s, item, action) -> true);
         for (int slot : OUTPUT_SLOTS) {
-            preset.addMenuClickHandler(slot, (p, s, item, action) -> true);
+            preset.addMenuClickHandler(slot, (p, slotNum, clickedItem, action) -> {
+                if (action.toString().startsWith("PICKUP_") || action.toString().startsWith("DROP_")) {
+                    return true;
+                }
+                return false;
+            });
         }
-        preset.addMenuClickHandler(STATUS_SLOT, (p, s, item, action) -> false);
+        preset.addMenuClickHandler(STATUS_SLOT, ChestMenuUtils.getEmptyClickHandler());
     }
 
-    protected void newItemMenu(BlockMenu menu) {
+    protected void newItemMenu(@Nonnull BlockMenu menu) {
         for (int i = 0; i < 27; i++) {
             int finalI = i;
             if (i == INPUT_SLOT || i == STATUS_SLOT || Arrays.stream(OUTPUT_SLOTS).anyMatch(s -> s == finalI)) continue;
             ItemStack existing = menu.getItemInSlot(i);
             if (existing == null || existing.getType() != Material.GRAY_STAINED_GLASS_PANE) {
                 menu.replaceExistingItem(i, new CustomItemStack(Material.GRAY_STAINED_GLASS_PANE, " "));
-                menu.addMenuClickHandler(i, (p, s, item, action) -> false);
             }
+            menu.addMenuClickHandler(i, ChestMenuUtils.getEmptyClickHandler());
         }
-        menu.replaceExistingItem(INPUT_SLOT, null);
         menu.addMenuClickHandler(INPUT_SLOT, (p, s, item, action) -> true);
-        ItemStack status = new CustomItemStack(Material.REDSTONE, "§c状态: 待机");
-        menu.replaceExistingItem(STATUS_SLOT, status);
-        menu.addMenuClickHandler(STATUS_SLOT, (p, s, item, action) -> false);
-        for (int slot : OUTPUT_SLOTS) {
-            menu.replaceExistingItem(slot, null);
+        if (menu.getItemInSlot(STATUS_SLOT) == null) {
+            menu.replaceExistingItem(STATUS_SLOT, new CustomItemStack(Material.REDSTONE, "§c状态: 待机"));
         }
+        menu.addMenuClickHandler(STATUS_SLOT, ChestMenuUtils.getEmptyClickHandler());
+
     }
 
     @EventHandler
     public void onInventoryClick(InventoryClickEvent event) {
-        if (Util.protectOutputSlots(event, plugin, OUTPUT_SLOTS, WASTE_ID, menu -> menu.getPreset().getID().equals(getId()))) {
-            return;
-        }
         if (!(event.getInventory().getHolder() instanceof BlockMenu menu) || !menu.getPreset().getID().equals(getId())) {
             return;
         }
+
+        int rawSlot = event.getRawSlot();
         Player player = (Player) event.getWhoClicked();
-        int slot = event.getSlot();
+        boolean shouldSave = false;
+        String saveReason = null;
+
+        // 处理 BlockMenu 槽位（rawSlot < 27）
+        if (rawSlot < menu.toInventory().getSize()) {
+            // 输出槽
+            if (Arrays.stream(OUTPUT_SLOTS).anyMatch(s -> s == rawSlot)) {
+                String action = event.getAction().toString();
+                if (action.startsWith("PICKUP_") || action.startsWith("DROP_") || action.equals("MOVE_TO_OTHER_INVENTORY")) {
+                    menu.save(menu.getLocation());
+                }
+                return;
+            }
+
+            // 输入槽
+            if (rawSlot == INPUT_SLOT) {
+                ItemStack cursor = event.getCursor();
+                String fuelId = Util.getSlimefunId(cursor);
+                menu.save(menu.getLocation());
+                saveReason = "输入槽修改";
+
+                // 检查燃料切换
+                String currentFuelId = BlockStorage.getLocationInfo(menu.getLocation(), "fuel_id");
+                if (fuelId != null && currentFuelId != null && !fuelId.equals(currentFuelId)) {
+                    ConversionUtil.AbstractConversionProcessor oldProcessor = processors.get(currentFuelId);
+                    if (oldProcessor != null) {
+                        oldProcessor.pause(menu, menu.getLocation(), plugin, new int[]{INPUT_SLOT}, OUTPUT_SLOTS);
+                    }
+                    BlockStorage.addBlockInfo(menu.getLocation(), "fuel_id", null);
+                    BlockStorage.addBlockInfo(menu.getLocation(), "rule_id", null);
+                    BlockStorage.addBlockInfo(menu.getLocation(), "energy_per_tick", null);
+                    BlockStorage.addBlockInfo(menu.getLocation(), "task_state", null);
+                    for (ConversionUtil.ConversionRule rule : rules.values()) {
+                        BlockStorage.addBlockInfo(menu.getLocation(), "processing_time_" + rule.getRuleId(), null);
+                    }
+                    saveReason = "输入槽修改（燃料切换）";
+                    menu.save(menu.getLocation());
+                }
+                return;
+            }
+        }
+
+        // 处理背包栏位（rawSlot >= 27）
+        // Shift+左键插入输入槽
         if (event.getClickedInventory() != null && event.getClickedInventory().equals(player.getInventory()) &&
                 event.getClick() == org.bukkit.event.inventory.ClickType.SHIFT_LEFT &&
                 event.getAction() == org.bukkit.event.inventory.InventoryAction.MOVE_TO_OTHER_INVENTORY) {
             ItemStack current = event.getCurrentItem();
             if (current != null && current.getType() != Material.AIR) {
                 ItemStack inputItem = menu.getItemInSlot(INPUT_SLOT);
+                String fuelId = Util.getSlimefunId(current);
+                boolean matchesFuel = fuelId != null && fuels.containsKey(fuelId);
                 boolean canInsertInput = inputItem == null || inputItem.getType() == Material.AIR ||
-                        (inputItem.isSimilar(current) && inputItem.getAmount() < inputItem.getMaxStackSize());
-                if (!canInsertInput) {
-                    event.setCancelled(true);
-                    player.sendMessage("§c输入槽已满或不可存入！");
+                        (inputItem.isSimilar(current) && inputItem.getAmount() < inputItem.getMaxStackSize() && matchesFuel);
+
+                // 检查燃料切换
+                String currentFuelId = BlockStorage.getLocationInfo(menu.getLocation(), "fuel_id");
+                if (fuelId != null && currentFuelId != null && !fuelId.equals(currentFuelId)) {
+                    ConversionUtil.AbstractConversionProcessor oldProcessor = processors.get(currentFuelId);
+                    if (oldProcessor != null) {
+                        oldProcessor.pause(menu, menu.getLocation(), plugin, new int[]{INPUT_SLOT}, OUTPUT_SLOTS);
+                    }
+                    BlockStorage.addBlockInfo(menu.getLocation(), "fuel_id", null);
+                    BlockStorage.addBlockInfo(menu.getLocation(), "rule_id", null);
+                    BlockStorage.addBlockInfo(menu.getLocation(), "energy_per_tick", null);
+                    BlockStorage.addBlockInfo(menu.getLocation(), "task_state", null);
+                    for (ConversionUtil.ConversionRule rule : rules.values()) {
+                        BlockStorage.addBlockInfo(menu.getLocation(), "processing_time_" + rule.getRuleId(), null);
+                    }
+                    saveReason = "输入槽修改（燃料切换，Shift+左键）";
+                    menu.save(menu.getLocation());
                 }
             }
         }
     }
-
     @EventHandler
-    public void onInventoryDrag(InventoryDragEvent event) {
-        if (event.getRawSlots().contains(INPUT_SLOT)) {
+    public void onInventoryDrag(InventoryDragEvent event ) {
+        if (!(event.getInventory().getHolder() instanceof BlockMenu menu) || !menu.getPreset().getID().equals(getId())) {
             return;
         }
-        Util.protectOutputSlots(event, plugin, OUTPUT_SLOTS, WASTE_ID, menu -> menu.getPreset().getID().equals(getId()));
+        menu.save(menu.getLocation());
     }
 
     @Override
@@ -435,5 +644,9 @@ public abstract class StarsGenerator extends SlimefunItem implements EnergyNetPr
     @Override
     public boolean isChargeable() {
         return true;
+    }
+
+    private Location normalizeLocation(Location location) {
+        return new Location(location.getWorld(), location.getBlockX(), location.getBlockY(), location.getBlockZ());
     }
 }
